--- a/packages/ts-config/package.json
+++ b/packages/ts-config/package.json
@@ -4,5 +4,5 @@
   "description": "Typescript configurations for modular packages",
   "version": "1.0.0",
   "license": "MIT",
-  "private": true
+  "private": "true"
 }
