--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
   "workspaces": [
     "packages/*"
   ],
-  "scripts": {}
+  "packageManager": "^npm@10.2.4",
+  "scripts": {
+    "dev": "turbo run dev --parallel",
+    "build": "turbo run build"
+  },
+  "devDependencies": {
+    "turbo": "^2.0.3"
+  }
 }
